src/styles/Home.css
.home {
  flex-grow: 1;
}

/* Top Section */

.top-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  position: relative;
}

.homepage-img {
  height: 720px;
  object-fit: cover;
  width: 100%;
  z-index: -1;
  filter: brightness(0.66);
}

.shop-now {
  background-color: var(--blue);
  padding: 12px 32px;
  border-radius: 4px;
  transition: 0.2s ease;
}

.shop-now:hover {
  transform: scale(1.1);
}

.image-text-overlay {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 1rem;
  margin-top: 8rem;
  padding-left: 12px;
  padding-right: 10%;
  position: absolute;
  z-index: -1;
}

.image-text {
  color: rgb(247, 247, 247);
  font-family: "Montserrat", sans-serif;
  font-weight: normal;
  letter-spacing: 0.5px;
  font-size: 2.5rem;
}

/* Bottom Section */

.bottom-section {
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 24px;
}

.bottom-section-heading {
  text-transform: uppercase;
  letter-spacing: 1px;
}

.featured-items {
  align-content: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(228px, 1fr));
  gap: 24px;
  justify-items: center;
  width: 100%;
  max-width: 1200px;
}

